# parsec-code-parsec-01

./: README.md
test_webcam_opencv30/: CMakeLists.txt  main_openfile.cpp  mylib.cu  mylib.h
